<resources>
    <string name="app_name">Leadfellow</string>
    <string name="loginHeader">Log In</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="full_name">Full name</string>
    <string name="username">Username</string>
    <string name="add_providers">Add providers</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="add_provider">Add provider +</string>
    <string name="phone_number">Phone number</string>
    <string name="company">Company</string>
    <string name="additional_info">Additional info</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="goback">go back</string>
    <string name="Submit">Submit</string>
    <string name="Leadinfo">Lead Info</string>
    <string name="Sendlead">Send Lead</string>
    <string name="commission">Commission</string>
    <string name="lead_info">Lead Info</string>
</resources>