<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lfbg"
    tools:context=".Leadinfo">

    <TextView
        android:id="@+id/textView"
        android:layout_width="384dp"
        android:layout_height="87dp"
        android:text="Lead info"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.91" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="82dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.261">

        <EditText
            android:id="@+id/leadinfoFirstname"
            android:layout_width="wrap_content"
            android:layout_height="58dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_corners"
            android:ems="10"
            android:hint="@string/first_name"
            android:inputType="textPersonName"
            android:paddingLeft="20dp"
            android:theme="@style/Base.TextAppearance.AppCompat"
            android:textColor="@color/black"/>

        <EditText
            android:id="@+id/leadinfoLastname"
            android:layout_width="wrap_content"
            android:layout_height="58dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_corners"
            android:ems="10"
            android:hint="@string/last_name"
            android:inputType="textPersonName"
            android:paddingLeft="20dp"
            android:theme="@style/Base.TextAppearance.AppCompat"
            android:textColor="@color/black"/>

    </LinearLayout>

    <EditText
        android:id="@+id/leadinfoEmail"
        android:layout_width="375dp"
        android:layout_height="58dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:layout_weight="1"
        android:background="@drawable/rounded_corners"
        android:ems="10"
        android:hint="@string/e_mail"
        android:inputType="textEmailAddress"
        android:paddingLeft="20dp"
        android:textColor="@color/black"
        android:theme="@style/Base.TextAppearance.AppCompat"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.378" />

    <EditText
        android:id="@+id/editTextTextPersonName3"
        android:layout_width="375dp"
        android:layout_height="115dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/rounded_corners"
        android:ems="10"
        android:hint="@string/additional_info"
        android:inputType="textPersonName"
        android:paddingLeft="20dp"
        android:textColor="@color/black"
        android:theme="@style/Base.TextAppearance.AppCompat"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.775" />

    <EditText
        android:id="@+id/leadinfoCompany"
        android:layout_width="375dp"
        android:layout_height="58dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/rounded_corners"
        android:ems="10"
        android:hint="@string/company"
        android:inputType="textPersonName"
        android:paddingLeft="20dp"
        android:textColor="@color/black"
        android:theme="@style/Base.TextAppearance.AppCompat"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.597" />

    <EditText
        android:id="@+id/leadinfoPhone"
        android:layout_width="375dp"
        android:layout_height="58dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/rounded_corners"
        android:ems="10"
        android:hint="@string/phone_number"
        android:inputType="phone"
        android:paddingLeft="20dp"
        android:textColor="@color/black"
        android:theme="@style/Base.TextAppearance.AppCompat"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.472" />

    <Button
        android:id="@+id/button3"
        android:layout_width="375dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_corners"
        android:text="Send lead"
        android:textColor="@color/lfbg"
        android:onClick="login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.931" />
</androidx.constraintlayout.widget.ConstraintLayout>