<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/lfbg"
    tools:context=".Signup"
    tools:layout_editor_absoluteX="33dp"
    tools:layout_editor_absoluteY="-16dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="404dp"
        android:layout_height="820dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <Button
            android:id="@+id/forgotPassButton"
            android:layout_width="370dp"
            android:layout_height="58dp"
            android:background="@drawable/rounded_corners"
            android:text="@string/sign_up"
            android:textColor="@color/lfbg"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.533"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.756" />

        <TextView
            android:id="@+id/forgotPassHeader"
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:fontFamily="sans-serif"
            android:text="@string/sign_up"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="34sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.195" />

        <TextView
            android:id="@+id/loginForgotPw"
            android:layout_width="148dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:fontFamily="sans-serif"
            android:text="@string/forgot_your_password"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.826" />

        <EditText
            android:id="@+id/signupusername"
            android:layout_width="370dp"
            android:layout_height="58dp"
            android:background="@drawable/rounded_corners"
            android:ems="10"
            android:hint="@string/username"
            android:inputType="textPersonName"
            android:paddingStart="20dp"
            android:theme="@style/Base.TextAppearance.AppCompat"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.466"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/forgotPassEmail"
            android:layout_width="370dp"
            android:layout_height="58dp"
            android:background="@drawable/rounded_corners"
            android:ems="10"
            android:hint="@string/full_name"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:paddingStart="20dp"
            android:theme="@style/Base.TextAppearance.AppCompat"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.466"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.311" />

        <EditText
            android:id="@+id/signUpEmail"
            android:layout_width="370dp"
            android:layout_height="58dp"
            android:background="@drawable/rounded_corners"
            android:ems="10"
            android:hint="@string/e_mail"
            android:inputType="textEmailAddress"
            android:paddingStart="20dp"
            android:theme="@style/Base.TextAppearance.AppCompat"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.466"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.405" />

        <EditText
            android:id="@+id/signupPassword"
            android:layout_width="370dp"
            android:layout_height="58dp"
            android:background="@drawable/rounded_corners"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingStart="20dp"
            android:theme="@style/Base.TextAppearance.AppCompat"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.466"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.593" />

        <ImageButton
            android:id="@+id/buttonBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/homeAsUpIndicator"
            android:onClick="goBack"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.073"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.125"
            app:srcCompat="?attr/homeAsUpIndicator" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>