<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:aapt="http://schemas.android.com/aapt"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">
    <!-- Log In -->


    <!-- drawable/log_in.xml -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/log_in"
            android:layout_width="match_parent"
            android:layout_height="733dp"
            android:background="@color/lfbg"
            android:clipToOutline="true"
            tools:layout_editor_absoluteX="-1dp"
            tools:layout_editor_absoluteY="72dp">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="338dp"
                android:layout_height="117dp"
                android:contentDescription="TODO"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.438"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.137"
                app:srcCompat="@drawable/mobileuiimg" />

            <EditText
                android:id="@+id/loginEmail"
                android:layout_width="370dp"
                android:layout_height="58dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/rounded_corners"
                android:ellipsize="end"
                android:ems="10"
                android:fontFamily="sans-serif"
                android:hint="@string/e_mail"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                android:paddingStart="20dp"
                android:textColor="@color/black"
                android:theme="@style/Base.TextAppearance.AppCompat"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/forgotPassHeader"
                app:layout_constraintVertical_bias="0.118" />

            <TextView
                android:id="@+id/forgotPassHeader"
                android:layout_width="wrap_content"
                android:layout_height="55dp"
                android:fontFamily="sans-serif"
                android:text="@string/loginHeader"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="34sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/imageView2"
                app:layout_constraintVertical_bias="0.21"
                />

            <EditText
                android:id="@+id/loginPassword"
                android:layout_width="370dp"
                android:layout_height="58dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="20dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/rounded_corners"
                android:ems="10"
                android:fontFamily="sans-serif"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:paddingStart="20dp"
                android:theme="@style/Base.TextAppearance.AppCompat"
                app:layout_constraintBottom_toTopOf="@+id/loginForgotPw"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.666"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/loginEmail"
                app:layout_constraintVertical_bias="0.0" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/loginButton"
                android:layout_width="370dp"
                android:layout_height="58dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/rounded_corners"
                android:fontFamily="sans-serif"
                android:text="@string/loginHeader"
                android:textColor="@color/lfbg"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView2"
                app:layout_constraintVertical_bias="0.631" />

            <TextView
                android:id="@+id/loginForgotPw"
                android:layout_width="148dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:fontFamily="sans-serif"
                android:text="@string/forgot_your_password"
                android:textColor="@color/white"
                android:clickable="true"
                android:onClick="forgotPassword"
                app:layout_constraintBottom_toTopOf="@+id/loginButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.076"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView2"
                app:layout_constraintVertical_bias="0.887" />

            <TextView
                android:id="@+id/loginDontHaveAcc"
                android:layout_width="201dp"
                android:layout_height="36dp"
                android:layout_marginStart="52dp"
                android:fontFamily="sans-serif"
                android:paddingStart="30dp"
                android:text="@string/don_t_have_an_account"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/loginButton"
                app:layout_constraintVertical_bias="0.108" />

            <TextView
                android:id="@+id/loginSignUp"
                android:layout_width="117dp"
                android:layout_height="36dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="76dp"
                android:fontFamily="sans-serif"
                android:text="@string/sign_up"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/loginDontHaveAcc"
                app:layout_constraintTop_toBottomOf="@+id/loginButton"
                app:layout_constraintVertical_bias="0.23"
                android:clickable="true"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>